--- a/color/style.css
+++ b/color/style.css
@@ -15,6 +15,7 @@ font-family: 'Josefin Sans', sans-serif;
 :root {
     --main-bg-color: rgb(32, 32, 32);
     --vehicle_color: hsl(360, 100%, 50%);
+    --font: 'Roboto', sans-serif;
 }
 
 body {
@@ -27,7 +28,7 @@ h1 {
     width: 80%;
     text-align:  center;
     word-break: keep-all;
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font);
 }
 
 /* -----------------------------------*/
@@ -52,7 +53,7 @@ button {
     
     text-align: center;
     font-size: 1.4em;
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font);
     
     margin: 10px 25px;
     margin-top: 25px;
@@ -64,15 +65,29 @@ button {
     
     background-color: var(--vehicle_color);
     margin-top: 25px;
+    padding-top: 5px;
+    
+    border: 5px solid white; 
+    -webkit-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    -moz-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    
+    text-align: center;
 }
 
 #colorId {
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font);
 }
 
 p2 {
     color: white;
-    font-family: 'Roboto', sans-serif;
+    font-family: var(--font);
     text-shadow: 2px 1px 7px rgba(252, 0, 150, 0.85);
 }
 
@@ -115,25 +130,31 @@ p2 {
 
 /* The Modal (background) */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0); /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.75); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
 .modal-content {
-  background-color: #fefefe;
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+    background-color: rgb(255, 255, 255);
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    font-family: var(--font);
+    border-radius: 25px;
+}
+
+.modal-content input {
+    margin: 5px;
 }
 
 /* The Close Button */
@@ -149,4 +170,20 @@ p2 {
   color: black;
   text-decoration: none;
   cursor: pointer;
+}
+
+input {
+    border: 5px solid white; 
+    -webkit-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    -moz-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    padding: 5px;
+    background: rgba(255, 255, 255, 0.5);
+    margin: 0 0 10px 0;
 }
